tests/NormalTests/paczka1/fuzzy1/28262796.err
Error in line 1: s35I A727 1,8
Error in line 8: s35I S591 70,9
Error in line 14: Egw A727 82,3
Error in line 24: Egw S902 138,1
Error in line 25: j2hLwC A36 95,8
